<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VDSL Tester</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Info</string>
    <string name="title_section2">1 day</string>
    <string name="title_section3">15 minutes</string>
    <string name="title_section4">HLog</string>
    <string name="title_section5">graph bit</string>
    <string name="title_section6">graph SNR</string>
    <string name="title_section7">graph QLN</string>
    <string name="title_section8">graph HLog</string>
    <string name="modemLabel">Modem type:</string>
    <string name="modeLabel">Mode:</string>
    <string name="profileLabel">Profile:</string>
    <string name="typeLabel">Type:</string>
    <string name="wanIPLabel">WAN IP:</string>
    <string name="SWVersionLabel">SW version:</string>
    <string name="reconnectLabel">Reconnect:</string>
    <string name="upTimeLabel">Up time:</string>
    <string name="linkTimeLabel">Link time:</string>
    <string name="currentSpeedLabel">Actual rate</string>
    <string name="maxSpeedLabel">Max rate</string>
    <string name="snrmLabel">SNRM</string>
    <string name="delayLabel">Delay</string>
    <string name="inpLabel">INP</string>
    <string name="powerLabel">Power</string>
    <string name="usLabel">US</string>
    <string name="dsLabel">DS</string>
    <string name="latnLabel">LATN</string>
    <string name="satnLabel">SATN</string>
    <string name="u0Label">U0</string>
    <string name="d1Label">D1</string>
    <string name="u1Label">U1</string>
    <string name="d2Label">D2</string>
    <string name="u2Label">U2</string>
    <string name="d3Label">D3</string>
    <string name="u3Label">U3</string>
    <string name="connectionError">Connection error</string>
    <string name="esLabel">ES</string>
    <string name="uasLabel">UAS</string>
    <string name="crcLabel">CRC</string>
    <string name="fecLabel">FEC</string>
    <string name="SUMAErrorsLinkTimeLabel">SUMA Errors Link Time</string>
    <string name="SUMAErrorsLatest1DayTimeLabel">SUMA Errors Latest 1 Day Time</string>
    <string name="SUMAErrorsPrevious1DayTimeLabel">SUMA Errors Previous 1 Day Time</string>
    <string name="SUMAErrorsLatest15MinutesTimeLabel">SUMA Errors Latest 15 Minutes Time</string>
    <string name="SUMAErrorsPrevious15MinutesTimeLabel">SUMA Errors Previous 15 Minutes Time</string>
    <string name="carrier">carrier</string>
    <string name="frequency">frequency</string>
    <string name="value">value</string>
    <string name="subcarrier">Subcarrier</string>
    <string name="freqmhz">Freq [MHz]</string>
    <string name="hlogdb">Hlog[dB]</string>
    <string name="hlogCar1">72</string>
    <string name="hlogCar2">232</string>
    <string name="hlogCar3">812</string>
    <string name="hlogCar4">1275</string>
    <string name="hlogCar5">1855</string>
    <string name="hlogCar6">2899</string>
    <string name="hlogCar7">3710</string>
    <string name="hlogFreq1">0.3</string>
    <string name="hlogFreq2">1.0</string>
    <string name="hlogFreq3">3.5</string>
    <string name="hlogFreq4">5.5</string>
    <string name="hlogFreq5">8.0</string>
    <string name="hlogFreq6">12.5</string>
    <string name="hlogFreq7">16.0</string>
    <string name="OKButton">Start</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="db">dB</string>
    <string name="dbmphz">dBm/Hz</string>
    <string name="bits">bits</string>

</resources>