<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/tableRow0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/SUMAErrorsLinkTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/SUMAErrorsLinkTimeLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/SUMAErrorsLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/esErrorsLinkTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/esLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/uasErrorsLinkTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/uasLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/crcErrorsLinkTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/crcLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/fecErrorsLinkTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/fecLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/usErrorsLinkTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/usLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usESLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usUASLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usCRCLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usFECLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/dsSumaErrorsLinkTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/dsLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsESLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsUASLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsCRCLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsFECLinkTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <LinearLayout
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/SUMAErrorsLatest1DayTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/SUMAErrorsLatest1DayTimeLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/SUMAErrorsLatest1DayTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/esLatest1DayTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/esLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/uasLatest1DayTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/uasLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/crcLatest1DayTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/crcLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/fecLatest1DayTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/fecLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/usLatest1DayTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/usLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usESLatest1DayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usUASLatest1DayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usCRCLatest1DayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usFECLatest1DayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/dsLatest1DayTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/dsLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsESLatest1DayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsUASLatest1DayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsCRCLatest1DayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsFECLatest1DayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <LinearLayout
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/SUMAErrorsPrevious1DayTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/SUMAErrorsPrevious1DayTimeLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/SUMAErrorsPrevious1DayTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView />

            <TextView
                android:id="@+id/esPrevious1DayTimeLabelTextView"
                android:padding="5dip"
                android:text="@string/esLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/uasPrevious1DayTimeLabelTextView"
                android:padding="5dip"
                android:text="@string/uasLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/crcPrevious1DayTimeLabelTextView"
                android:padding="5dip"
                android:text="@string/crcLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/fecPrevious1DayTimeLabelTextView"
                android:padding="5dip"
                android:text="@string/fecLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/usPrevious1DayTimeLabelTextView"
                android:padding="5dip"
                android:text="@string/usLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usESPrevious1DayTextView"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usUASPrevious1DayTextView"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usCRCPrevious1DayTextView"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/usFECPrevious1DayTextView"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/dsPrevious1DayTimeLabelTextView"
                android:padding="5dip"
                android:text="@string/dsLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsESPrevious1DayTextView"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsUASPrevious1DayTextView"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsCRCPrevious1DayTextView"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dsFECPrevious1DayTextView"
                android:background="@drawable/cell_shape"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

</ScrollView>